<resources>
    <string name="app_name">Recall</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account_log_in">Already Have an Account , Log In!</string>
    <string name="don_t_have_an_account">Don\'t have an account? Sign In!</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="age">Age</string>
    <string name="select_education_level">Select Education Level</string>
    <string name="select_nationality">Select Nationality</string>
    <string name="next">Next</string>
    <string name="lorum">Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string-array name="countries_array">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Democratic Republic of the Congo</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>East Timor</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Eswatini</item>
        <item>Ethiopia</item>
        <item>Federated States of Micronesia</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Greece</item>
        <item>Grenada</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Italy</item>
        <item>Ivory Coast</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Kosovo</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>North Korea</item>
        <item>North Macedonia</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Palestine</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Qatar</item>
        <item>Republic of the Congo</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Tuvalu</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Vatican City</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>

    </string-array>
    <string-array name="education_levels_array">
        <item>Primary School</item>
        <item>High School</item>
        <item>Associate Degree</item>
        <item>Bachelor\'s Degree</item>
        <item>Master\'s Degree</item>
        <item>Doctorate or Higher</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apple">Apple</string>
    <string name="name_object">Name Object</string>
    <string name="submit">Submit</string>
    <string name="bnt">BNT</string>
    <string name="dst">DST</string>
    <string name="sst">SST</string>
    <string name="start">Start</string>
    <string name="boston_naming_test">Boston Naming Test</string>
    <string name="digit_span_test">Digit Span Test</string>
    <string name="spatial_span_test">Spatial Span Test</string>
    <string name="Clue">Clue</string>
    <string name="results">Results</string>
    <string name="repeat_sequence">Repeat Sequence</string>
    <string name="start_test">Start Test</string>
    <string name="scope_test">Scope Test</string>
    <string name="past_games">Past Games</string>
    <string name="past_games1">Past Games:</string>
    <string name="date">Date:</string>
    <string name="back">Back</string>
    <string name="cue_utilization">Cue Utilization:</string>
    <string name="perseverative_errors">Perseverative Errors:</string>
    <string name="semantic_errors">Semantic Errors:</string>
    <string name="total_correct">Total Correct:</string>
    <string name="total_errors">Total Errors:</string>
    <string name="phonetic_errors">Phonetic Errors:</string>
    <string name="span_time">Span Time:</string>
    <string name="completed_sequences">Completed Sequences:</string>
    <string name="st">ST</string>
    <string name="stroop_test">Stroop test</string>
    <string name="average_time">Average Time:</string>
    <string name="correct_answers">Correct Answers:</string>
    <string name="incorrect_answers">Incorrect Answers:</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="BNTdesc">The Boston Naming Test (BNT) is a well-known neuropsychological assessment used to evaluate an individual\'s ability to name objects, which is an important aspect of language function.</string>
    <string name="DSTtest">The Digit Span Test is a neuropsychological assessment designed to evaluate an individual\'s working memory capacity and attention. This test is commonly used in various settings, including clinical, educational, and research environments, to assess cognitive function and diagnose potential impairments.</string>
    <string name="SSTdesc">The Spatial Span Test is a neuropsychological assessment designed to measure an individual\'s visuospatial working memory and attention. This test evaluates how well a person can remember and reproduce sequences of spatial locations. </string>
    <string name="STdesc">The Stroop Test is a cognitive assessment tool used to evaluate an individual\'s ability to manage cognitive interference, attention, and processing speed. It measures how well a person can control their automatic responses and focus on specific tasks, which is important for executive functioning.</string>

</resources>