<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="left|center_vertical"
    android:background="@color/primary"
    tools:context=".st.ScoreST"
    tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/averageTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginStart="36dp"
            android:textColor="@color/white"
            android:text="@string/average_time" />

        <TextView
            android:id="@+id/correctAnswers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginStart="36dp"
            android:textColor="@color/white"
            android:text="@string/correct_answers" />

        <TextView
            android:id="@+id/incorrectAnswers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginStart="36dp"
            android:textColor="@color/white"
            android:text="@string/incorrect_answers" />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginStart="150dp"
            android:text="@string/back"
            android:textColor="@color/primary"
            android:textSize="24sp"/>


</LinearLayout>
