<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/primary"
    tools:context=".dst.DST">

    <TextView
        android:id="@+id/sequenceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="34sp"
        android:layout_marginTop="80dp"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:padding="16dp" />


    <TextView
        android:id="@+id/Enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:textSize="24sp"
        android:layout_marginTop="150dp"
        android:background="@drawable/white_tile"
        android:layout_gravity="center_horizontal"
        android:padding="16dp" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="1"
        android:columnCount="3"
        android:padding="16dp"
        android:rowCount="3">

        <Button
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/_1"
            android:textColor="@color/primary"
            android:textSize="26sp"
            android:onClick="onNumberButtonClick"
            android:layout_margin="4dp"
            android:backgroundTint="@color/white"/>

        <Button
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/_2"
            android:textColor="@color/primary"
            android:textSize="26sp"
            android:onClick="onNumberButtonClick"
            android:layout_margin="4dp"
            android:backgroundTint="@color/white"/>

        <Button
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/_3"
            android:textColor="@color/primary"
            android:textSize="26sp"
            android:onClick="onNumberButtonClick"
            android:layout_margin="4dp"
            android:backgroundTint="@color/white"/>

        <Button
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/_4"
            android:textColor="@color/primary"
            android:textSize="26sp"
            android:onClick="onNumberButtonClick"
            android:layout_margin="4dp"
            android:backgroundTint="@color/white"/>

        <Button
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/_5"
            android:textColor="@color/primary"
            android:textSize="26sp"
            android:onClick="onNumberButtonClick"
            android:layout_margin="4dp"
            android:backgroundTint="@color/white"/>

        <Button
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:text="@string/_6"
            android:textColor="@color/primary"
            android:textSize="26sp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:onClick="onNumberButtonClick"
            android:backgroundTint="@color/white"/>

        <Button
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/_7"
            android:onClick="onNumberButtonClick"
            android:textColor="@color/primary"
            android:textSize="26sp"
            android:layout_margin="4dp"
            android:backgroundTint="@color/white"/>

        <Button
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:text="@string/_8"
            android:textColor="@color/primary"
            android:textSize="26sp"
            android:onClick="onNumberButtonClick"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:backgroundTint="@color/white"/>

        <Button
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:text="@string/_9"
            android:textColor="@color/primary"
            android:textSize="26sp"
            android:layout_column="2"
            android:onClick="onNumberButtonClick"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:backgroundTint="@color/white"/>

    </GridLayout>

</LinearLayout>
