<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".bnt.StartBNT"
    android:background="@drawable/starting">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:text="@string/spatial_span_test" />

    <!-- TODO: M: Add a text to speech for description -->
    <!-- TODO: L: Add a text for instruction -->

    <TextView
        android:id="@+id/instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="70dp"
        android:gravity="center_horizontal"
        android:text="@string/SSTdesc"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="220dp"
        android:background="@drawable/purple_tile"
        android:gravity="center"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />


</LinearLayout>