<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".bnt.BNT"
    android:background="@color/primary">

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="620dp"
        android:background="@drawable/white_tile"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="60dp"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/clue"
            android:textAllCaps="false"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:layout_marginTop="60dp"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/primary"
            android:text="@string/Clue"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/name_object"
            android:textSize="20sp"
            tools:ignore="Autofill,TextFields" />

        <Button
            android:id="@+id/submit"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:textAlignment="textStart"
            android:backgroundTint="@color/primary"
            android:text="@string/submit"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>
