<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:fontFamily="monospace"
    tools:context=".access.LogIn">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="270dp"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        app:hintTextAppearance="@style/CustomHintTextAppearance"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeErrorColor="@color/UIOnly"
        app:boxBackgroundColor="@color/primary"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:fontFamily="monospace"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        app:hintTextAppearance="@style/CustomHintTextAppearance"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeErrorColor="@color/UIOnly"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailL"
        app:passwordToggleEnabled="true"
        app:boxBackgroundColor="@color/primary"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/register"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:background="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordL"
        app:layout_constraintVertical_bias="0.384" />

    <TextView
        android:id="@+id/SignUpTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save" />
    </androidx.constraintlayout.widget.ConstraintLayout>
